# baculovirus-vlp

./: .nbstripout  LICENSE  README.md  pyproject.toml  requirements.txt
baculovirus_vlp/: __init__.py  parameters.py  simulation.py  utils.py
examples/: determine_jmin_jmax.ipynb  run_simulation.ipynb
