[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baculovirus-vlp"
version = "0.1.0"
authors = [{name = "Shouyu Yan", email = "yan.shouyu@gmail.com"}]
description = "A Python package for simulating baculovirus expression system"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
]

# [project.optional-dependencies]
# dev = ["pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/yanshouyu/baculovirus-vlp"
Issues = "https://github.com/yanshouyu/baculovirus-vlp/issues"